fixed logo size on tablet

--- a/src/components/ToolBar/ToolBar.css
+++ b/src/components/ToolBar/ToolBar.css
@@ -37,7 +37,8 @@
 
 .logo_image {
   width: 100%;
-  height: 80%;
+  height: 200%;
+  border: 1px solid red;
 }
 
 .toolbar_logo a {
