--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ code,
 del,
 dfn,
 em,
-img,
 ins,
 kbd,
 q,
